--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -1,9 +1,8 @@
-# Dev environment
-pip
-autopep8
-
-# App
 asgiref==3.7.2
+autopep8==2.3.1
 Django==5.0
+django-ckeditor==6.7.1
+django-js-asset==2.2.0
+pycodestyle==2.12.1
 sqlparse==0.4.4
 typing_extensions==4.9.0
