--- a/mysite/requirements.txt
+++ b/mysite/requirements.txt
@@ -3,6 +3,10 @@ autopep8==2.3.1
 Django==5.0
 django-ckeditor==6.7.1
 django-js-asset==2.2.0
+Faker==30.6.0
+pillow==11.0.0
 pycodestyle==2.12.1
+python-dateutil==2.9.0.post0
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.9.0
